--- a/data/settings.json
+++ b/data/settings.json
@@ -3,5 +3,6 @@
 "map_width":"2560", "map_height":"1430",
 "window_width":"2560", "window_height":"1440",
 "window_title":"Reinforcement-Learning-In-2D-Ecosystems",
-"clock_speed": 6
+"clock_speed": 6,
+"training_mode": "True"
 }
